--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,16 @@
-@import 'fonts.css';
-
 body {
-   font-family: 'Open Sans';
+   font-family: 'Roboto';
    background: #5e42a6;
 }
 .menu {
-   background: #312450;
+   background: #00000021;
+   white-space: nowrap;
 }
 .menu ul {
+   padding: 0;
    margin: 0;
+   overflow-x: auto;
+   overflow-y: hidden;
 }
 .menu li, .menu a {
    display: block;
@@ -19,21 +21,21 @@ body {
    -ms-transition: color 0.2s ease;
    transition: color 0.2s ease;
    padding: 20px 0;
-   margin: 0 10px;
+   margin-right: 10px;
    font-size: 0.6em;
    font-weight: bold;
    letter-spacing: 0.25em;
    text-decoration: none;
    text-transform: uppercase;
-   color: #9674ec;
+   color: #c1c1c1;
 }
-.menu a:hover, .menu a.active {
+.menu a:hover, .menu li.active a {
    color: #fff;
 }
 section h1 {
    font-size: 32px;
    text-align: center;
-   margin-bottom: 50px;
+   margin-bottom: 40px;
 }
 p {
    color: #a5a7ff;
@@ -41,9 +43,12 @@ p {
 a:hover {
    text-decoration: none;
 }
+i.contact {
+   margin-right: 10px;
+}
 section {
    color: #fff;
-   padding: 50px 0;
+   padding: 40px 0;
 }
 input, textarea {
    -moz-appearance: none;
@@ -99,10 +104,9 @@ textarea {
 
 section.one {
    background-image: url(../svg/intro.svg);
-    background-position: top right;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    padding: 100px 0;
+   background-position: top right;
+   background-repeat: no-repeat;
+   background-size: 100% 100%;
 }
 
 section.two {
@@ -124,7 +128,6 @@ section.three {
    border-radius: 0.25em;
    border: solid 1px rgba(255, 255, 255, 0.15);
    background: rgba(255, 255, 255, 0.05);
-   margin: 32px 0 2em 0;
 }
 .features section {
    padding: 3.5em 3em 1em 7em;
@@ -155,13 +158,15 @@ section.four {
 }
 .works a {
    display: inline-block;
-   height: 190px;
+   height: 500px;
    line-height: 190px;
    text-align: center;
    color: white;
+   opacity: 0.8;
+   transition: 0.5s;
 }
 .works a:hover {
-   background:#1f1f1f;
+   opacity: 1;
 }
 
 section.five {
@@ -175,3 +180,56 @@ footer {
    line-height: 60px;
    text-align: center;
 }
+
+@media screen and (max-width: 980px) {
+
+.works a {
+    background-size:cover;
+}
+.menu {display:none;}
+
+section.one {
+	text-align:center;
+
+}
+section.one img {
+	display:none;
+}
+			.features {
+				display: block;
+			}
+
+			.features i {
+			    display:none;
+			}
+
+			.features h3 {
+			    font-size: 22px;
+			}
+				.features section {
+					border-top-width: 1px !important;
+					border-left-width: 0 !important;
+					width: 100%;
+				}
+
+					.features section:first-child {
+						border-top-width: 0 !important;
+					}
+
+		}
+
+		@media screen and (max-width: 736px) {
+
+			.features section {
+				padding: 2.5em 1.5em 0.1em 5.5em ;
+			}
+
+		}
+
+		@media screen and (max-width: 480px) {
+
+			.features section {
+				padding: 2em 1.5em 0.1em 1.5em ;
+			}
+
+		}
